<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343434">

    <Spinner
        android:id="@+id/currency_spinner_output"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@+id/resultLabel"
        app:layout_constraintTop_toBottomOf="@+id/to_label" />

    <TextView
        android:id="@+id/from_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/fromLabel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/currency_input"
        app:layout_constraintEnd_toStartOf="@+id/currency_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/currency_input" />

    <ImageView
        android:id="@+id/currencyLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_monetization_on_24"
        app:tint="#F4D474" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <TextView
        android:id="@+id/currency_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currencyTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <EditText
        android:id="@+id/currency_input"
        android:layout_width="255dp"
        android:layout_height="71dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/currencyInputHint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currency_title" />

    <TextView
        android:id="@+id/to_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/toLabel"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/currency_spinner_input"
        app:layout_constraintTop_toBottomOf="@+id/currency_spinner_input" />

    <Spinner
        android:id="@+id/currency_spinner_input"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currency_input" />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <Button
        android:id="@+id/convert_btn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#F4D474"
        android:text="@string/convertBtn"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currency_spinner_output" />

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/resultLabel"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/to_label"
        app:layout_constraintTop_toBottomOf="@+id/convert_btn" />

    <TextView
        android:id="@+id/currency_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/currResultTxt"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>